feat: implement password reset functionality with email notifications

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,10 @@ JWT_EXPIRES_IN="7d"
 # Server
 PORT=3000
 FRONTEND_URL="http://localhost:5173"
+
+# Email (SMTP)
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT=587
+SMTP_USER="tuteparrillano@gmail.com"
+SMTP_PASS="homp kmti iigg whol"
+SMTP_FROM="Tute Parrillano <tuteparrillano@gmail.com>"
