--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^8.0.1",
     "socket.io": "^4.8.3",
     "socket.io-client": "^4.8.3"
   },
@@ -31,6 +32,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.6",
+    "@types/nodemailer": "^7.0.9",
     "prisma": "^6.9.0",
     "tsx": "^4.19.2",
     "typescript": "~5.9.3"
