--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL="postgresql://postgres:Elmouse@miky87@localhost:5432/tute_valenciano"
+DATABASE_URL="postgresql://user:password@localhost:5432/tute_valenciano"
 # JWT
 JWT_SECRET="your-super-secret-jwt-key-change-in-production"
 JWT_EXPIRES_IN="7d"
@@ -11,6 +11,6 @@ FRONTEND_URL="http://localhost:5173"
 # Email (SMTP)
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=587
-SMTP_USER="tuteparrillano@gmail.com"
-SMTP_PASS="homp kmti iigg whol"
-SMTP_FROM="Tute Parrillano <tuteparrillano@gmail.com>"
+SMTP_USER="your-email@gmail.com"
+SMTP_PASS="your-app-password"
+SMTP_FROM="Tute Parrillano <your-email@gmail.com>"
