feat: update build process and add production support
- Changed build script from `tsc` to `tsup` in package.json for improved bundling.
- Updated index.ts to serve the frontend in production and added path handling.
- Modified auth routes to adjust cookie settings based on environment.
- Updated socket server configuration to conditionally set CORS based on environment.
- Wrapped development-only button in StatsScreen component with environment check.
- Configured Vite to output build files to the server's public directory.
- Added new migration for games and reset token fields in the database.
- Created tsconfig.build.json for build-specific TypeScript configuration.
- Added tsup.config.ts for bundling configuration with external dependencies handling.

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,24 @@
 # Database
 DATABASE_URL="postgresql://user:password@localhost:5432/tute_valenciano"
+
 # JWT
 JWT_SECRET="your-super-secret-jwt-key-change-in-production"
 JWT_EXPIRES_IN="7d"
 
 # Server
 PORT=3000
+NODE_ENV="development"
 FRONTEND_URL="http://localhost:5173"
 
-# Email (SMTP)
+# Email (SMTP) — Opcional, necesario para recuperación de contraseña
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=587
 SMTP_USER="your-email@gmail.com"
 SMTP_PASS="your-app-password"
 SMTP_FROM="Tute Parrillano <your-email@gmail.com>"
+
+# ── Producción (Railway) ──
+# NODE_ENV="production"
+# DATABASE_URL → Lo proporciona Railway automáticamente
+# FRONTEND_URL="https://tu-app.railway.app"
+# JWT_SECRET → Cambiar a una cadena aleatoria segura
