--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "tsc",
+    "build": "tsup",
     "start": "node dist/index.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
@@ -34,6 +34,7 @@
     "@types/node": "^22.10.6",
     "@types/nodemailer": "^7.0.9",
     "prisma": "^6.9.0",
+    "tsup": "^8.5.1",
     "tsx": "^4.19.2",
     "typescript": "~5.9.3"
   }
